# rust_todo

./: Cargo.toml  todo.db
src/: main.rs
templates/: index.html
